welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Unit does not take parameters
override def run() {for (colone <- 1 to 3) {faireMotif(); reposition()};}
                                                      ^